--- a/admin.html
+++ b/admin.html
@@ -46,7 +46,7 @@
                       BMW <button class="choose" name="BMW">Select</button>
                     </li>
                   </ul>
-                  <hr />
+                  <hr class="separator" />
                   <!-- ----------for Approval -->
                   <p>Received Request</p>
 
