--- a/userLoginPage.html
+++ b/userLoginPage.html
@@ -28,7 +28,7 @@
 
                   <ul id="items" class="displayedProducts"></ul>
                   <!-- ----------for link -->
-                  <hr />
+                  <hr class="separator" />
                   <p>Received ID</p>
 
                   <ul class="displayedID"></ul>
